Clear and today buttons Layout bugs

--- a/css/sdp.css
+++ b/css/sdp.css
@@ -2,10 +2,10 @@
     position: absolute;
     min-width: 150px;
     min-height: 100px;
-    background: #F4F4F4;
     display: none;
     font: normal 12px tahoma;
     color: black;
+    z-index: 9999;
 }
 
 .datepick_header {
@@ -18,6 +18,43 @@
     position: relative;
     font-weight: bold;
 }
+
+.datepick_footer 
+{
+    background: white;
+    border: 1px solid black;
+    border-top: 0;
+    padding: 7px;
+    overflow: hidden;
+}
+
+    .datepick_footer div:first-child 
+    {
+        float: left;
+    }
+
+        .datepick_footer div a 
+        {
+            font-size: 11px;
+            font-weight: bold;           
+            text-decoration: none;
+            color: Gray;
+            padding: 2px 10px 3px 10px;
+            border-radius: 10px;
+        }
+        
+        .datepick_footer div a:hover
+        {
+            background: black;
+            color: White;
+        }
+    
+    .datepick_footer div:last-child 
+    {
+        float: right;
+    }
+    
+    
 
 .datepick_arrowleft {
     width: 0;
@@ -49,6 +86,10 @@
     width: 40px;
 }
 
+.datepick_datecontainer 
+{
+    background-color: White;
+}
 
 
 .datepick_datecontainer tbody tr td {
@@ -89,10 +130,12 @@
     font-weight: bold;
     color: crimson;
     border: 1px solid crimson;
+    border-radius: 50%;
 }
 
 .datepick_initial {
     font-weight: bold;
     color: forestgreen;
     border: 1px solid forestgreen;
+    border-radius: 50%;
 }
